--- a/yummy/template/shop.pug
+++ b/yummy/template/shop.pug
@@ -198,6 +198,23 @@ section.section_2.container-fluid
             p.card-text.price.text-center
               | 50.000 VND
 
+    .pagination_area
+      nav(aria-label='Page navigation example')
+        ul.pagination
+          li.page-item
+            a.page-link(href='#' aria-label='Previous')
+              span(aria-hidden='true') &laquo;
+              span.sr-only Previous
+          li.page-item
+            a.page-link(href='#') 1
+          li.page-item
+            a.page-link(href='#') 2
+          li.page-item
+            a.page-link(href='#') 3
+          li.page-item
+            a.page-link(href='#' aria-label='Next')
+              span(aria-hidden='true') &raquo;
+              span.sr-only Next 
 
 
 //footer
