--- a/yummy/template/shop.pug
+++ b/yummy/template/shop.pug
@@ -71,7 +71,7 @@ section.section_2.container-fluid
               a(href='cart.html') <i class="fas fa-heart"></i>
           .card-body
             .text-center
-              a(href='cart.html').card-text.name
+              a(href='singerProduct.html').card-text.name
                 | Bít Tết Bò Kobe
             p.card-text.tag.text-center
               small.text-muted Món chính
@@ -88,7 +88,7 @@ section.section_2.container-fluid
               a(href='cart.html') <i class="fas fa-heart"></i>
           .card-body
             .text-center
-              a(href='cart.html').card-text.name
+              a(href='singerProduct.html').card-text.name
                 | Bít Tết Bò Kobe
             p.card-text.tag.text-center
               small.text-muted Món chính
@@ -105,7 +105,7 @@ section.section_2.container-fluid
               a(href='cart.html') <i class="fas fa-heart"></i>
           .card-body
             .text-center
-              a(href='cart.html').card-text.name
+              a(href='singerProduct.html').card-text.name
                 | Bít Tết Bò Kobe
             p.card-text.tag.text-center
               small.text-muted Món chính
@@ -122,7 +122,7 @@ section.section_2.container-fluid
               a(href='cart.html') <i class="fas fa-heart"></i>
           .card-body
             .text-center
-              a(href='cart.html').card-text.name
+              a(href='singerProduct.html').card-text.name
                 | Bít Tết Bò Kobe
             p.card-text.tag.text-center
               small.text-muted Món chính
@@ -139,7 +139,7 @@ section.section_2.container-fluid
               a(href='cart.html') <i class="fas fa-heart"></i>
           .card-body
             .text-center
-              a(href='cart.html').card-text.name
+              a(href='singerProduct.html').card-text.name
                 | Bít Tết Bò Kobe
             p.card-text.tag.text-center
               small.text-muted Món chính
@@ -156,7 +156,7 @@ section.section_2.container-fluid
               a(href='cart.html') <i class="fas fa-heart"></i>
           .card-body
             .text-center
-              a(href='cart.html').card-text.name
+              a(href='singerProduct.html').card-text.name
                 | Bít Tết Bò Kobe
             p.card-text.tag.text-center
               small.text-muted Món chính
@@ -173,7 +173,7 @@ section.section_2.container-fluid
               a(href='cart.html') <i class="fas fa-heart"></i>
           .card-body
             .text-center
-              a(href='cart.html').card-text.name
+              a(href='singerProduct.html').card-text.name
                 | Bít Tết Bò Kobe
             p.card-text.tag.text-center
               small.text-muted Món chính
@@ -190,7 +190,7 @@ section.section_2.container-fluid
               a(href='cart.html') <i class="fas fa-heart"></i>
           .card-body
             .text-center
-              a(href='cart.html').card-text.name
+              a(href='singerProduct.html').card-text.name
                 | Bít Tết Bò Kobe
             p.card-text.tag.text-center
               small.text-muted Món chính
