--- a/yummy/css/singerProduct.css
+++ b/yummy/css/singerProduct.css
@@ -23,6 +23,78 @@
 }
 
 
+.hover_card a{
+    padding: 0.5rem;
+    color: #FFFFFF;
+}
+.hover_card{
+    position: absolute;
+    left: 30%;
+    top: 20%;
+    opacity: 0;
+    display: block;
+}
+
+.card:hover{
+    opacity: 1;
+}
+
+/* hover styles */
+.hover_area {
+    position: relative;
+  }
+  
+  .card-img-top {
+    line-height: 0;
+    overflow: hidden;
+  }
+  
+  .card-img-top img {
+    filter: blur(0px);
+    transition: filter 0.3s ease-in;
+    transform: scale(1.1);
+  }
+  
+  .hover_card {
+    font-size: 1.5em;
+    font-weight: bold;
+    text-decoration: none;
+    z-index: 1;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    transition: opacity .5s;
+    background: rgba(90,0,10,0.4);
+    color: white;
+    
+    /* position the text in t’ middle*/
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .card:hover .hover_card {
+    opacity: 1;
+  }
+  
+  .card:hover .card-img-top img {
+    filter: blur(2px);
+  }
+  
+  
+  /* for touch screen devices */
+  @media (hover: none) { 
+    .hover_card {
+      opacity: 1;
+    }
+    .card-img-top img {
+      filter: blur(2px);
+    }
+  }
+
 
 
 
@@ -123,5 +195,15 @@
 .card .price{
     font-family: 'Poppins', sans-serif;
     font-size: 2.4rem;
+    color: #FD5B00;
+}
+
+.card .name {
+    font-family: 'Prata', serif;
+    font-size: 2.4rem;
+    color: #000;
+}
+.card a:hover{
+    text-decoration: none;
     color: #FD5B00;
 }
